0519 인포맵 슬라이드 추가

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -39,6 +39,7 @@
     text-shadow: 4px 4px 4px #ff3f3f;
   }
   a {
+    transition: color 1s;
     &:hover {
       color: #ff3f3f;
       text-decoration: none;
