--- a/app/views/videos/infomap4.html.erb
+++ b/app/views/videos/infomap4.html.erb
@@ -72,35 +72,60 @@
       <!-- Trigger the modal with a button -->
       <!-- <a href="http://localhost:3000/videos/18_slush5"> -->
       <!-- <img src="assets/map_slush.png" id="myButton" class="img-responsive" data-toggle="modal" data-target="#myModal" alt=""> -->
-      <a href="/videos/17_slush_4" target="_self">
-      <img src="assets/slush2016map_info4.png" id="slushmaps" class="img-responsive" data-toggle="modal" data-target="#myModal1" alt=""></a>
+      <!-- <a href="/videos/17_slush_4" target="_self"> -->
+        <img src="assets/slush2016map_info4.png" id="slushmaps" class="img-responsive" data-toggle="modal" data-target="#myModal4" alt="">
+      <!-- </a> -->
     </div>
 
 
   </div>
 
 
-  <!-- Modal -->
-  <!-- <div id="container video">
-    <div class="modal fade bs-example-modal-lg" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog"> -->
+  <!-- Modal4 -->
+  <div id="container video">
+    <div class="modal fade bs-example-modal-lg" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
       <!-- Modal Content -->
-         <!--  <div class="modal-content">
-              <div class="modal-header">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="myModalLabel">Information Map</h4>
-              </div>
-              <div class="modal-body">
-                  <iframe width="400" height="300" frameborder="0" allowfullscreen=""></iframe>
-              <div class="modal-footer">
-                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                  <button type="button" class="btn btn-primary">Save changes</button>
-              </div>
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">Keynote Stage - Honda</h4>
+            </div>
+            <div class="modal-body">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/xx-N3abzFvA" frameborder="0" allowfullscreen></iframe>
+            <div class="modal-footer">
+                <a data-toggle="modal" data-target="#moreModal" class="btn btn-primary">More</a>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+            </div>
             </div>
         </div>
       </div>
 
     </div>
-  </div> -->
+  </div>
+
+
+  <!-- More Info Modal -->
+  <div id="container video">
+    <div class="modal fade bs-example-modal-lg" id="moreModal" tabindex="-1" role="dialog" aria-labelledby="moreModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+      <!-- Modal Content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">Information</h4>
+            </div>
+            <div class="modal-body">
+                blah blah
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+            </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
 
 </div>
