--- a/app/views/videos/infomap.html.erb
+++ b/app/views/videos/infomap.html.erb
@@ -78,20 +78,20 @@
           <!-- Slider Frame -->
           <div id="sliderFrame">
               <div id="slider">
-                  <a data-toggle="modal" data-target="#myModal">
-                  <img id="slushmaps" class="img-responsive" src="assets/slush2016map_info.png" data-toggle="modal" data-target="#myModal" alt="">
+                  <a href="#">
+                    <img class="img-responsive" src="assets/slush2016map_info.png" data-toggle="modal" data-target="#myModal" alt="">
                   </a>
-                  <a data-toggle="modal" data-target="#myModal2">
-                  <img id="slushmaps" class="img-responsive" src="assets/slush2016map_info2.png" data-toggle="modal" data-target="#myModal2" alt="">
+                  <a href="#">
+                    <img class="img-responsive" src="assets/slush2016map_info2.png" data-toggle="modal" data-target="#myModal2" alt="">
                   </a>
-                  <a data-toggle="modal" data-target="#myModal3">
-                  <img id="slushmaps" class="img-responsive" src="assets/slush2016map_info3.png" data-toggle="modal" data-target="#myModal3" alt="">
+                  <a href="#">
+                    <img class="img-responsive" src="assets/slush2016map_info3.png" data-toggle="modal" data-target="#myModal3" alt="">
                   </a>
-                  <a data-toggle="modal" data-target="#myModal4">
-                  <img id="slushmaps" class="img-responsive" src="assets/slush2016map_info4.png" data-toggle="modal" data-target="#myModal4" alt="">
+                  <a href="#">
+                    <img class="img-responsive" src="assets/slush2016map_info4.png" data-toggle="modal" data-target="#myModal4" alt="">
                   </a>
-                  <a data-toggle="modal" data-target="#myModal5">
-                  <img id="slushmaps" class="img-responsive" src="assets/slush2016map_info5.png" data-toggle="modal" data-target="#myModal5" alt="">
+                  <a href="#">
+                    <img class="img-responsive" src="assets/slush2016map_info5.png" data-toggle="modal" data-target="#myModal5" alt="">
                   </a>
               </div>
         <!-- <div style="display: none;">
@@ -134,6 +134,102 @@
             <div class="modal-footer">
                 <a data-toggle="modal" data-target="#moreModal" class="btn btn-primary">More</a>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+            </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- Modal2 -->
+  <div id="container video">
+    <div class="modal fade bs-example-modal-lg" id="myModal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+      <!-- Modal Content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">AI Hotel desk service</h4>
+            </div>
+            <div class="modal-body">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/MCvG70oZafg" frameborder="0" allowfullscreen></iframe>
+            <div class="modal-footer">
+                <a data-toggle="modal" data-target="#moreModal" class="btn btn-primary">More</a>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+            </div>
+            </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- Modal3 -->
+  <div id="container video">
+    <div class="modal fade bs-example-modal-lg" id="myModal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+      <!-- Modal Content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">fun fun - stupid</h4>
+            </div>
+            <div class="modal-body">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/mAO78-kwWwQ" frameborder="0" allowfullscreen></iframe>
+            <div class="modal-footer">
+                <a data-toggle="modal" data-target="#moreModal" class="btn btn-primary">More</a>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+            </div>
+            </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- Modal4 -->
+  <div id="container video">
+    <div class="modal fade bs-example-modal-lg" id="myModal4" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+      <!-- Modal Content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">Keynote Stage - Honda</h4>
+            </div>
+            <div class="modal-body">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/xx-N3abzFvA" frameborder="0" allowfullscreen></iframe>
+            <div class="modal-footer">
+                <a data-toggle="modal" data-target="#moreModal" class="btn btn-primary">More</a>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
+            </div>
+            </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- Modal5 -->
+  <div id="container video">
+    <div class="modal fade bs-example-modal-lg" id="myModal5" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+      <!-- Modal Content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">Neon Block</h4>
+            </div>
+            <div class="modal-body">
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/paO5EcxQSPg" frameborder="0" allowfullscreen></iframe>
+            <div class="modal-footer">
+                <a data-toggle="modal" data-target="#moreModal" class="btn btn-primary">More</a>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
             </div>
             </div>
         </div>
