0520 인포맵페이지 통합(불필요한 파일들 삭제)

--- a/app/assets/stylesheets/videos.scss
+++ b/app/assets/stylesheets/videos.scss
@@ -144,7 +144,11 @@ nav.upload {
   text-align: center;
 }
 
-#moreModal {
+#moreModal,
+#moreModal2,
+#moreModal3,
+#moreModal4,
+#moreModal5, {
   position: absolute;
   top: 60%;
 }
