--- a/app/views/videos/infomap.html.erb
+++ b/app/views/videos/infomap.html.erb
@@ -155,7 +155,7 @@
             <div class="modal-body">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/MCvG70oZafg" frameborder="0" allowfullscreen></iframe>
             <div class="modal-footer">
-                <a data-toggle="modal" data-target="#moreModal" class="btn btn-primary">More</a>
+                <a data-toggle="modal" data-target="#moreModal2" class="btn btn-primary">More</a>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
             </div>
@@ -179,7 +179,7 @@
             <div class="modal-body">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/mAO78-kwWwQ" frameborder="0" allowfullscreen></iframe>
             <div class="modal-footer">
-                <a data-toggle="modal" data-target="#moreModal" class="btn btn-primary">More</a>
+                <a data-toggle="modal" data-target="#moreModal3" class="btn btn-primary">More</a>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
             </div>
@@ -203,7 +203,7 @@
             <div class="modal-body">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/xx-N3abzFvA" frameborder="0" allowfullscreen></iframe>
             <div class="modal-footer">
-                <a data-toggle="modal" data-target="#moreModal" class="btn btn-primary">More</a>
+                <a data-toggle="modal" data-target="#moreModal4" class="btn btn-primary">More</a>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
             </div>
@@ -227,7 +227,7 @@
             <div class="modal-body">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/paO5EcxQSPg" frameborder="0" allowfullscreen></iframe>
             <div class="modal-footer">
-                <a data-toggle="modal" data-target="#moreModal" class="btn btn-primary">More</a>
+                <a data-toggle="modal" data-target="#moreModal5" class="btn btn-primary">More</a>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                 <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
             </div>
@@ -259,5 +259,98 @@
 
     </div>
   </div>
+
+  <!-- More Info Modal2 -->
+  <div id="container video">
+    <div class="modal fade bs-example-modal-lg" id="moreModal2" tabindex="-1" role="dialog" aria-labelledby="moreModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+      <!-- Modal Content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">Information</h4>
+            </div>
+            <div class="modal-body">
+                More Info 2
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+            </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- More Info Modal3 -->
+  <div id="container video">
+    <div class="modal fade bs-example-modal-lg" id="moreModal3" tabindex="-1" role="dialog" aria-labelledby="moreModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+      <!-- Modal Content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">Information</h4>
+            </div>
+            <div class="modal-body">
+                3!!
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+            </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- More Info Modal4 -->
+  <div id="container video">
+    <div class="modal fade bs-example-modal-lg" id="moreModal4" tabindex="-1" role="dialog" aria-labelledby="moreModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+      <!-- Modal Content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">Information</h4>
+            </div>
+            <div class="modal-body">
+                4~
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+            </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <!-- More Info Modal5 -->
+  <div id="container video">
+    <div class="modal fade bs-example-modal-lg" id="moreModal5" tabindex="-1" role="dialog" aria-labelledby="moreModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+      <!-- Modal Content -->
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="myModalLabel">Information</h4>
+            </div>
+            <div class="modal-body">
+                5 oh!
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+            </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+
+
+
+
 
 </div>
