--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -34,13 +34,14 @@
   </div>
 
   <div class="section" id="section2">
-      <span>
-        This week
-      </span>
-      <p><a href="/infomap">Slush in Tokyo</a></p>
+      <p class="week_sub">Last week</span>
+      <p class="week_do"><a href="/infomap">Slush in Tokyo</a></p>
   </div>
 
-  <!-- <div class="section" id="section3"><h1>Title 3</h1></div> -->
+  <div class="section" id="section3">
+      <p class="week_sub">This week</span>
+      <p class="week_do"><a href="/infomap2">Title</a></p>
+  </div>
 
   <!-- <div class="section" id="section4"><h1>Title 4</h1></div> -->
 
