--- a/app/views/videos/infomap2.html.erb
+++ b/app/views/videos/infomap2.html.erb
@@ -6,16 +6,16 @@
           <!-- Default panel contents -->
           <div class="panel-heading"><h4>Best Information</h4></div>
           <div class="panel-body">
-            On May 13-14, Slush Asia brings together people with big dreams and determination from all over the world. Originally from Finland, Slush has grown to become one of the world’s largest startup events and has made a second home in Asia.
+            Description
           </div>
           <!-- List group -->
           <ul class="list-group">
             <li class="list-group-item text-right">by Team Illio</li>
             <li class="list-group-item text-right" style="color: #1111ff;">
-              <a href="#">#Tokyo</a>
-              <a href="#">#Slush</a>
-              <a href="#">#exciting</a>
-              <a href="#">#friend</a>
+              <a href="#">#hash_tag</a>
+              <a href="#">#hash_tag2</a>
+              <a href="#">#hash_tag3</a>
+              <a href="#">#hash_tag4</a>
             </li>
           </ul>
         </div>
@@ -29,38 +29,38 @@
               <th>TIME</th>
             </tr>
             <tr>
-              <td>James</td>
-              <td>Social Healing Cam</td>
+              <td>name</td>
+              <td>title</td>
               <td>2016.05.13 15:05</td>
             </tr>
             <tr>
-              <td>Sujin</td>
-              <td>AI Hotel desk service</td>
+              <td>name2</td>
+              <td>title</td>
               <td>2016.05.13 14:28</td>
             </tr>
             <tr>
-              <td>Lisa</td>
-              <td>fun fun - stupid</td>
+              <td>name3</td>
+              <td>title</td>
               <td>2016.05.13 14:22</td>
             </tr>
             <tr>
-              <td>Thomas</td>
-              <td>Keynote Stage - Honda</td>
+              <td>name4</td>
+              <td>title</td>
               <td>2016.05.13 14:01</td>
             </tr>
             <tr>
-              <td>Peter</td>
-              <td>Neon Block</td>
+              <td>name5</td>
+              <td>title</td>
               <td>2016.05.13 13:33</td>
             </tr>
             <tr>
-              <td>Oliver</td>
-              <td>Enterprise software</td>
+              <td>name6</td>
+              <td>title</td>
               <td>2016.05.13 13:12</td>
             </tr>
             <tr>
-              <td>Eugene</td>
-              <td>Cyber Arms Race</td>
+              <td>name7</td>
+              <td>title</td>
               <td>2016.05.13 13:06</td>
             </tr>
           </table>
@@ -249,7 +249,7 @@
                   <h4 class="modal-title" id="myModalLabel">Information</h4>
             </div>
             <div class="modal-body">
-                Human Touch Camera! Awesome +_+
+                blah blah
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
@@ -271,7 +271,7 @@
                   <h4 class="modal-title" id="myModalLabel">Information</h4>
             </div>
             <div class="modal-body">
-                May I help you, sir?
+                More Info 2
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
@@ -293,7 +293,7 @@
                   <h4 class="modal-title" id="myModalLabel">Information</h4>
             </div>
             <div class="modal-body">
-                Human Touch Camera 2 hahaha.
+                3!!
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
@@ -315,7 +315,7 @@
                   <h4 class="modal-title" id="myModalLabel">Information</h4>
             </div>
             <div class="modal-body">
-                wordee
+                4~
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
@@ -337,7 +337,7 @@
                   <h4 class="modal-title" id="myModalLabel">Information</h4>
             </div>
             <div class="modal-body">
-                "I Won't Let You Down" Movie
+                5 oh!
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
