0524 인포맵 수정

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,7 +40,7 @@
 
   <div class="section" id="section3">
       <p class="week_sub">This week</span>
-      <p class="week_do"><a href="/infomap2">Title</a></p>
+      <p class="week_do"><a href="/infomap2">U300 in Seoul</a></p>
   </div>
 
   <!-- <div class="section" id="section4"><h1>Title 4</h1></div> -->
