--- a/app/views/videos/infomap2.html.erb
+++ b/app/views/videos/infomap2.html.erb
@@ -6,16 +6,17 @@
           <!-- Default panel contents -->
           <div class="panel-heading"><h4>Best Information</h4></div>
           <div class="panel-body">
-            Description
+            <p>- 대학 내 유망한 학생 창업팀(300개)을 선발하여 성장단계별 집중육성 · 지원을 통한 사업화 성공모델 창출 및 확산 유도</p>
+            <p>- <도전 K-스타트업 2016> 통합본선에 진출할 대학 창업유망팀 10팀 내외 선발</p>
           </div>
           <!-- List group -->
           <ul class="list-group">
             <li class="list-group-item text-right">by Team Illio</li>
             <li class="list-group-item text-right" style="color: #1111ff;">
-              <a href="#">#hash_tag</a>
-              <a href="#">#hash_tag2</a>
-              <a href="#">#hash_tag3</a>
-              <a href="#">#hash_tag4</a>
+              <a href="#">#u300</a>
+              <a href="#">#창업유망팀300</a>
+              <a href="#">#K스타트업</a>
+              <a href="#">#일리오</a>
             </li>
           </ul>
         </div>
@@ -29,39 +30,39 @@
               <th>TIME</th>
             </tr>
             <tr>
-              <td>name</td>
-              <td>title</td>
-              <td>2016.05.13 15:05</td>
+              <td>수딘이</td>
+              <td>U300 공연</td>
+              <td>2016.05.24 17:10</td>
             </tr>
             <tr>
-              <td>name2</td>
-              <td>title</td>
-              <td>2016.05.13 14:28</td>
+              <td>형뚠</td>
+              <td>서울권베스트</td>
+              <td>2016.05.24 16:55</td>
             </tr>
             <tr>
-              <td>name3</td>
-              <td>title</td>
-              <td>2016.05.13 14:22</td>
+              <td>코긔</td>
+              <td>충청권!</td>
+              <td>2016.05.24 16:42</td>
             </tr>
             <tr>
-              <td>name4</td>
-              <td>title</td>
-              <td>2016.05.13 14:01</td>
+              <td>탱자</td>
+              <td>대경강원권 짱!</td>
+              <td>2016.05.24 16:21</td>
             </tr>
             <tr>
-              <td>name5</td>
-              <td>title</td>
-              <td>2016.05.13 13:33</td>
+              <td>얼쓰</td>
+              <td>호남제주권 1등</td>
+              <td>2016.05.24 15:33</td>
             </tr>
             <tr>
-              <td>name6</td>
-              <td>title</td>
-              <td>2016.05.13 13:12</td>
+              <td>헤띤</td>
+              <td>동남권베스트</td>
+              <td>2016.05.24 15:12</td>
             </tr>
             <tr>
-              <td>name7</td>
-              <td>title</td>
-              <td>2016.05.13 13:06</td>
+              <td>혜아</td>
+              <td>입구</td>
+              <td>2016.05.24 15:02</td>
             </tr>
           </table>
         </div>
@@ -79,20 +80,20 @@
           <div id="sliderFrame">
               <div id="slider">
                   <a href="#">
-                    <img class="img-responsive" src="assets/slush2016map_info.png" data-toggle="modal" data-target="#myModal" alt="">
+                    <img class="img-responsive" src="assets/u300/map4.png" data-toggle="modal" data-target="#myModal" alt="">
                   </a>
                   <a href="#">
-                    <img class="img-responsive" src="assets/slush2016map_info2.png" data-toggle="modal" data-target="#myModal2" alt="">
+                    <img class="img-responsive" src="assets/u300/map3.png" data-toggle="modal" data-target="#myModal2" alt="">
                   </a>
                   <a href="#">
-                    <img class="img-responsive" src="assets/slush2016map_info3.png" data-toggle="modal" data-target="#myModal3" alt="">
+                    <img class="img-responsive" src="assets/u300/map2.png" data-toggle="modal" data-target="#myModal3" alt="">
                   </a>
                   <a href="#">
-                    <img class="img-responsive" src="assets/slush2016map_info4.png" data-toggle="modal" data-target="#myModal4" alt="">
+                    <img class="img-responsive" src="assets/u300/map1.png" data-toggle="modal" data-target="#myModal4" alt="">
                   </a>
-                  <a href="#">
+                  <!-- <a href="#">
                     <img class="img-responsive" src="assets/slush2016map_info5.png" data-toggle="modal" data-target="#myModal5" alt="">
-                  </a>
+                  </a> -->
               </div>
         <!-- <div style="display: none;">
             <div id="htmlcaption3">
@@ -105,11 +106,11 @@
 
         <!--thumbnails-->
         <div id="thumbs">
-            <div class="thumb"><img src="assets/thumb_info.png" class="img-responsive" alt="" /></div>
-            <div class="thumb"><img src="assets/thumb_info2.png" class="img-responsive" alt="" /></div>
-            <div class="thumb"><img src="assets/thumb_info3.png" class="img-responsive" alt="" /></div>
-            <div class="thumb"><img src="assets/thumb_info4.png" class="img-responsive" alt="" /></div>
-            <div class="thumb"><img src="assets/thumb_info5.png" class="img-responsive" alt="" /></div>
+            <div class="thumb"><img src="assets/u300/thumb1.png" class="img-responsive" alt="" /></div>
+            <div class="thumb"><img src="assets/u300/thumb2.png" class="img-responsive" alt="" /></div>
+            <div class="thumb"><img src="assets/u300/thumb3.png" class="img-responsive" alt="" /></div>
+            <div class="thumb"><img src="assets/u300/thumb4.png" class="img-responsive" alt="" /></div>
+            <!-- <div class="thumb"><img src="assets/thumb_info5.png" class="img-responsive" alt="" /></div> -->
         </div>
     </div>
 
@@ -127,10 +128,10 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="myModalLabel">Social Healing Cam</h4>
+                  <h4 class="modal-title" id="myModalLabel">창업유망팀 300 대회장 입구</h4>
             </div>
             <div class="modal-body">
-                <iframe id="modalVideo" width="560" height="315" src="https://www.youtube.com/embed/c0FhF89bQ5E?autoplay=1" frameborder="0" allowfullscreen></iframe>
+                <iframe id="modalVideo" width="560" height="315" src="https://www.youtube.com/embed/5PbwSmolaNM?autoplay=1" frameborder="0" allowfullscreen></iframe>
             <div class="modal-footer">
                 <a data-toggle="modal" data-target="#moreModal" class="btn btn-primary">More</a>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -249,7 +250,8 @@
                   <h4 class="modal-title" id="myModalLabel">Information</h4>
             </div>
             <div class="modal-body">
-                blah blah
+                <p>서울 at센터 처음와봤는데 엄청 크네요.</p>
+                <p>입구에도 친절하게 u300포스터가 있어서 찾아오기 쉬웠어요.</p>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
