--- a/app/views/videos/infomap2.html.erb
+++ b/app/views/videos/infomap2.html.erb
@@ -17,6 +17,7 @@
               <a href="#">#창업유망팀300</a>
               <a href="#">#K스타트업</a>
               <a href="#">#일리오</a>
+              <a href="#">#Illio</a>
             </li>
           </ul>
         </div>
@@ -151,10 +152,10 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="myModalLabel">AI Hotel desk service</h4>
+                  <h4 class="modal-title" id="myModalLabel">U300 대회장</h4>
             </div>
             <div class="modal-body">
-                <iframe id="modalVideo2" width="560" height="315" src="https://www.youtube.com/embed/MCvG70oZafg?autoplay=1" frameborder="0" allowfullscreen></iframe>
+                <iframe id="modalVideo2" width="560" height="315" src="https://www.youtube.com/embed/WeWwnILiTbI?autoplay=1" frameborder="0" allowfullscreen></iframe>
             <div class="modal-footer">
                 <a data-toggle="modal" data-target="#moreModal2" class="btn btn-primary">More</a>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -175,10 +176,10 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="myModalLabel">fun fun - stupid</h4>
+                  <h4 class="modal-title" id="myModalLabel">U300</h4>
             </div>
             <div class="modal-body">
-                <iframe id="modalVideo3" width="560" height="315" src="https://www.youtube.com/embed/mAO78-kwWwQ?autoplay=1" frameborder="0" allowfullscreen></iframe>
+                <iframe id="modalVideo3" width="560" height="315" src="https://www.youtube.com/embed/zXIeuZYZxgs?autoplay=1" frameborder="0" allowfullscreen></iframe>
             <div class="modal-footer">
                 <a data-toggle="modal" data-target="#moreModal3" class="btn btn-primary">More</a>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -199,10 +200,10 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="myModalLabel">Keynote Stage - Honda</h4>
+                  <h4 class="modal-title" id="myModalLabel">U300 리허설</h4>
             </div>
             <div class="modal-body">
-                <iframe id="modalVideo4" width="560" height="315" src="https://www.youtube.com/embed/xx-N3abzFvA?autoplay=1" frameborder="0" allowfullscreen></iframe>
+                <iframe id="modalVideo4" width="560" height="315" src="https://www.youtube.com/embed/J74Zus9N5B8?autoplay=1" frameborder="0" allowfullscreen></iframe>
             <div class="modal-footer">
                 <a data-toggle="modal" data-target="#moreModal4" class="btn btn-primary">More</a>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -226,7 +227,7 @@
                   <h4 class="modal-title" id="myModalLabel">Neon Block</h4>
             </div>
             <div class="modal-body">
-                <iframe id="modalVideo5" width="560" height="315" src="https://www.youtube.com/embed/paO5EcxQSPg?autoplay=1" frameborder="0" allowfullscreen></iframe>
+                <iframe id="modalVideo5" width="560" height="315" src="https://www.youtube.com/embed/uAcsqADyloc?autoplay=1" frameborder="0" allowfullscreen></iframe>
             <div class="modal-footer">
                 <a data-toggle="modal" data-target="#moreModal5" class="btn btn-primary">More</a>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
