--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,48 +1,61 @@
+    <script>
+      $(function(){
+        if (navigator.userAgent.match(/(iPod|iPhone|iPad|Android)/)) {
+          $('#ios-notice').removeClass('hidden');
+          $('.parallax-container').height( $(window).height() * 0.5 | 0 );
+        } else {
+          $(window).resize(function(){
+            var parallaxHeight = Math.max($(window).height() * 0.7, 200) | 0;
+            $('.parallax-container').height(parallaxHeight);
+          }).trigger('resize');
+        }
+      });
+    </script>
 
-<div class="fullpage-home">
-  <div class="section" id="section1">
-    <div class="video-container">
-        <video autoplay loop muted id="video-background">
+    <section>
+      <div class="container">
+        <div id="ios-notice" class="alert alert-info hidden"><p><strong>Notice:</strong> Hello mobile user. Unfortunately, this parallax effect is not reliably achieved on mobile devices, so all you will see on this demo page are static backgrounds.  Please visit this page on a desktop browser to see its full effect.</p></div>
+      </div>
+    </section>
+
+    <div class="crt-parallaxvideo">
+        <video autoplay muted loop>
           <source src="/assets/mainVideo.mp4" type="video/mp4">
         </video>
-    </div>
-
-    <div class="container home">
-      <div class="row text-center">
-        <div class="col-md-12">
+        <div class="container home">
           <div class="row text-center">
             <div class="col-md-12">
-              <img src="/assets/mainlogo.png" alt="Responsive image">
+              <div class="row text-center">
+                <div class="col-md-12" id="treview_logo">
+                  <img class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3" src="/assets/mainlogo.png" alt="Responsive image">
+                </div>
+              </div>
+               <h1>Review your Travel!</h1>
             </div>
           </div>
-           <h3>Review your Travel</h3>
-        </div>
-      </div>
 
-      <div class="row travel_search" data-travels="<%= @travels.to_json %>">
-        <div class='col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3'>
-          <div class="input-group">
-            <input type="text" class="form-control typeahead" placeholder="Midnight in Paris" >
-            <span class="input-group-btn">
-              <button class="btn btn-danger search" type="button">Go</button>
-            </span>
+          <div class="row travel_search" data-travels="<%= @travels.to_json %>">
+            <div class="col-xs-10 col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3">
+              <div class="input-group">
+                <input type="text" class="form-control typeahead" placeholder="Midnight in Paris" >
+                <span class="input-group-btn">
+                  <button class="btn btn-danger search" type="button">Go</button>
+                </span>
+              </div>
+            </div>
           </div>
         </div>
-      </div>
     </div>
 
-  </div>
+    <!-- <section class="plax content">
+    </section> -->
 
-  <div class="section" id="section2">
-      <p class="week_sub">Last week</span>
+    <div class="plax ccparallax ccparallax-one">
+      <p class="week_sub">Last week</p>
       <p class="week_do"><a href="/infomap">Slush in Tokyo</a></p>
-  </div>
+    </div>
 
-  <div class="section" id="section3">
-      <p class="week_sub">This week</span>
+    <div class="plax ccparallax ccparallax-two">
+      <p class="week_sub">This week</p>
       <p class="week_do"><a href="/infomap2">U300 in Seoul</a></p>
-  </div>
-
-  <!-- <div class="section" id="section4"><h1>Title 4</h1></div> -->
-
-</div>
+    </div>
