0605 home 디자인 수정

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,11 +51,23 @@
     </section> -->
 
     <div class="plax ccparallax ccparallax-one">
-      <p class="week_sub">Last week</p>
-      <p class="week_do"><a href="/infomap">Slush in Tokyo</a></p>
+      <div class="container">
+        <div class="week_title">
+          <h1>Last week <small>Slush in Tokyo</small></h1>
+          <div class="col-md-offset-4 col-md-4 col-md-offset-4">
+            <a class="btn btn-danger btn-lg btn-block" role="button" href="/infomap">Let's See!</a>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="plax ccparallax ccparallax-two">
-      <p class="week_sub">This week</p>
-      <p class="week_do"><a href="/infomap2">U300 in Seoul</a></p>
+      <div class="container">
+        <div class="week_title">
+          <h1>This week <small>U300 in Seoul</small></h1>
+          <div class="col-md-offset-4 col-md-4 col-md-offset-4">
+            <a class="btn btn-danger btn-lg btn-block" role="button" href="/infomap2">Let's See!</a>
+          </div>
+        </div>
+      </div>
     </div>
