--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -48,33 +48,7 @@
     background-size: cover;
     padding-bottom: 50px;
     padding-top: 50px;
-
-      p.week_sub {
-      margin-top: 160px;
-        font-size: 4em;
-        color: #fff;
-        text-shadow: 1px 1px 2px #000;
-        text-align: center;
-      }
-
-      p.week_do {
-        font-size: 8em;
-        color: #fff;
-        text-shadow: 4px 4px 4px #ff3f3f;
-        text-align: center;
-      }
 }
-
-.plax a {
-    transition: all 0.5s;
-    text-decoration: none;
-    &:hover {
-      color: #ff3f3f;
-      text-decoration: none;
-      text-shadow: 2px 2px 8px #fff;
-    }
-    color: #fff;
-  }
 
 .plax.content {
     background: none repeat scroll 0 0 #fff;
@@ -82,17 +56,21 @@
 
 }
 .plax.ccparallax h1 {
-  font-weight: 700;
+  // font-weight: 700;
   font-size: 76px;
   text-align: center;
-  text-transform: uppercase;
+  // text-transform: uppercase;
   color:#FFF;
+    small {
+      font-size: 30px;
+      color:#fff;
+    }
 }
 
 .plax .headlines h2 {
     color: #000;
     font-family: "PT Sans",sans-serif;
-    font-size: 32px;
+    font-size: 44px;
     margin: 0;
   text-align: center;
 }
@@ -105,6 +83,12 @@
 }
 .plax .contentarea, .plax .contentarea h2{
   color:#000;
+}
+
+.week_title {
+  margin-top: 160px;
+  padding: 20px 0 60px 0;
+    background-color:rgba(0, 0, 0, 0.5);
 }
 
 
