--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -53,9 +53,11 @@
     <div class="plax ccparallax ccparallax-one">
       <div class="container">
         <div class="week_title">
-          <h1>Last week <small>Slush in Tokyo</small></h1>
+          <h1><small>Last week : </small>Slush in Tokyo</h1>
           <div class="col-md-offset-4 col-md-4 col-md-offset-4">
-            <a class="btn btn-danger btn-lg btn-block" role="button" href="/infomap">Let's See!</a>
+            <a class="btn btn-danger btn-lg btn-block" role="button" href="/infomap">
+              Let's See! <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            </a>
           </div>
         </div>
       </div>
@@ -64,9 +66,11 @@
     <div class="plax ccparallax ccparallax-two">
       <div class="container">
         <div class="week_title">
-          <h1>This week <small>U300 in Seoul</small></h1>
+          <h1><small>This week : </small>U300 in Seoul</h1>
           <div class="col-md-offset-4 col-md-4 col-md-offset-4">
-            <a class="btn btn-danger btn-lg btn-block" role="button" href="/infomap2">Let's See!</a>
+            <a class="btn btn-danger btn-lg btn-block" role="button" href="/infomap2">
+              Let's See! <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            </a>
           </div>
         </div>
       </div>
